# deepcraft-model-zoo-for-aurix

./: .gitattributes  .gitignore  .hadolint.yaml  LICENSE  README.md  pyproject.toml  source.txt
AIenhancedPID/: ai_enhanced_pid.ipynb  metadata.json  modelling_helper.py
AIenhancedPID/data/: d_.mat  data_inference_.mat  dummy_cte_.mat  i_.mat  labels.mat  labels.npy  p_.mat  saved_data.mat  saved_data.npy
AIenhancedPID/exported_model/: nn_tuner3a.fmu  nn_tuner3a_fmu.mlproj
AIenhancedPID/exported_model/slprj/_jitprj/: jitEngineAccessInfo.mat  sMEIuNUMuam1vASaKErjliF.l  sMEIuNUMuam1vASaKErjliF.mat  si3MQoUwNSpqXNkk3DRVKOF.l  si3MQoUwNSpqXNkk3DRVKOF.mat  stO08ngZWGfVlvo3zl7MEC.l  stO08ngZWGfVlvo3zl7MEC.mat
AnomalyDetection/: anomaly-detection.ipynb  metadata.json  modelling_helper.py
AnomalyDetection/data/: data.csv  metadata.csv
CentralScripts/: README.md  helper_functions.py  python_flask_client.py  requirements.txt  setup.sh  test_requirements.py  validate_requirements.py
ClassificationMobilenet/: metadata.json  modelling_helper.py  traffic_mobilenet.ipynb  weather_mobilenet.ipynb
ClassificationMobilenet/json/: traffic_classes.json
KeywordDetection/: keyword_detection.ipynb  metadata.json  modelling_helper.py
KeywordDetection/models/: KeywordDetectionModel.h5
MNISTimageClassification/: MNIST_CNN_digit_classification.ipynb  MNIST_MLP_digit_classification.ipynb  metadata.json  modelling_helper.py
ModelTemplate/: metadata.json  modelling_helper.py  new_model_template.ipynb
RemainingUsefulLifePrediction/: RUL_LSTM_prediction.ipynb  RUL_MLP_prediction.ipynb  metadata.json  modelling_helper.py
Tools/: entrypoint.sh  qemu_build.sh  tc_dockerfile
Tools/linker_scripts/: tsim-lto.ld
Tools/onnx2c-accelerated/V1.0.1/: onnx2c_model_zoo  testgen_target_tc3x_model_zoo  testgen_target_tc4x_model_zoo
Tools/python/: config.py  debug_conversion.ipynb  model_converter.py  onnx2c_flask_server.py
(+18 files in other folders)
